--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ body{
 }
 /*Barra de navegacion*/
   .myNavBarContainer{
-    background-color: #FAFAFA;
+    background-color: purple;
     width: auto;
     height: auto;
     padding-top: 10px;
@@ -28,8 +28,8 @@ body{
     display: block;
     padding: 8px;
     text-decoration: none;
-    color: black;
-    font-size: 25px;
+    color: white;
+    font-size: 15px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
   }
@@ -123,15 +123,16 @@ body{
 footer{
     width: auto;
     height: 60px;
-    background-color: #009150;
+    background-color: purple;
     display: flex;
-    justify-content: center;
+    justify-content:space-around;
     text-align: center;
+    position: relative;
 }
 
 .myFooterText{
    
-    color: black;
+    color: white;
     font-size: 15px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700; 
@@ -220,4 +221,44 @@ ul, ol {
 .nav li ul li ul {
   right:-50px;
   top:0px;
+}
+
+.mainDisplayContainer{
+  display: flex;
+  position: relative;
+}
+
+.logoBig{
+  width: 449px;
+  height: 320px;
+  background-color: palevioletred;
+}
+
+.infoServices{
+  width: 449px;
+  height: 320px;
+  background-color: yellow;
+}
+
+.locationPicture{
+  width: 449px;
+  height: 320px;
+  background-color: palevioletred;
+}
+
+.bigHuellitas{
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  padding-top: 20px;
+  padding-left: 50px;
+  width: 250px;
+  height: 280px;
+}
+
+.descriptionTextWoof{
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  font-size: larger;
 }
